--- a/python_basics.ipynb
+++ b/python_basics.ipynb
@@ -15,128 +15,130 @@
   },
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "rLEzd_gw8lnJ"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# PYTHON BASICS QUESTION AND ANSWERS :\n",
         "\n",
-        "1 = What is Python, and Why is it Popular?\n",
-        "~ Python is a high-level, interpreted programming language recognized for its simplicity and readability. Created by Guido van Rossum and first released in 1991, Python has become one of the most popular languages due to its clear syntax, versatility, and broad applicability from web development to data science, machine learning, and automation. Key factors driving its popularity include:\n",
+        "1. What is Python, and Why is it Popular?\n",
+        "- Python is a high-level, interpreted programming language recognized for its simplicity and readability. Created by Guido van Rossum and first released in 1991, Python has become one of the most popular languages due to its clear syntax, versatility, and broad applicability from web development to data science, machine learning, and automation. Key factors driving its popularity include:\n",
         "\n",
-        "a. Easy to learn and read.\n",
+        "     - Easy to learn and read.\n",
         "\n",
-        "b. Broad support from libraries and frameworks.\n",
+        "     - Broad support from libraries and frameworks.\n",
         "\n",
-        "c. Large, supportive community.\n",
+        "     - Large, supportive community.\n",
         "\n",
-        "d. Versatility across domains\n",
+        "     - Versatility across domains\n",
         "\n",
-        "2 = What is an Interpreter in Python?\n",
-        "~ The Python interpreter is the engine that reads and executes Python code line by line. Unlike compiled languages, which transform code into machine instructions all at once, Python's interpreter analyzes, compiles to bytecode, and runs code dynamically. This enables fast development, immediate feedback, and interactive coding. The most common implementation is CPython, but others include PyPy and Jython.\n",
+        "2. What is an Interpreter in Python?\n",
+        "- The Python interpreter is the engine that reads and executes Python code line by line. Unlike compiled languages, which transform code into machine instructions all at once, Python's interpreter analyzes, compiles to bytecode, and runs code dynamically. This enables fast development, immediate feedback, and interactive coding. The most common implementation is CPython, but others include PyPy and Jython.\n",
         "\n",
-        "3 = What Are Pre-Defined Keywords in Python?\n",
-        "~ Keywords in Python are reserved words with specific meanings that are part of the language's syntax. Examples include if, else, while, for, try, def, class, break, and return.\n",
+        "3. What Are Pre-Defined Keywords in Python?\n",
+        "- Keywords in Python are reserved words with specific meanings that are part of the language's syntax. Examples include if, else, while, for, try, def, class, break, and return.\n",
         "\n",
-        "4 = Can Keywords Be Used as Variable Names?\n",
+        "4. Can Keywords Be Used as Variable Names?\n",
         "\n",
-        "~ No, keywords cannot be used as variable names or identifiers. Doing so results in a SyntaxError. For example, writing for = 10 or if = 5 will cause an error. Python enforces this rule to avoid ambiguity in code parsing and maintain clarity.\n",
+        "- No, keywords cannot be used as variable names or identifiers. Doing so results in a SyntaxError. For example, writing for = 10 or if = 5 will cause an error. Python enforces this rule to avoid ambiguity in code parsing and maintain clarity.\n",
         "\n",
-        "5 = What is Mutability in Python?\n",
+        "5. What is Mutability in Python?\n",
         "\n",
-        "~ Mutability refers to whether the data stored in an object can be changed after creation:\n",
+        "- Mutability refers to whether the data stored in an object can be changed after creation:\n",
         "\n",
-        "Mutable objects can have their contents altered (e.g., lists, dictionaries, sets).\n",
+        " Mutable objects can have their contents altered (e.g., lists, dictionaries, sets).\n",
         "\n",
-        "Immutable objects cannot be changed after creation (e.g., tuples, strings, integers).\n",
+        " Immutable objects cannot be changed after creation (e.g., tuples, strings, integers).\n",
         "\n",
-        "6 = Why Are Lists Mutable, but Tuples are Immutable?\n",
+        "6. Why Are Lists Mutable, but Tuples are Immutable?\n",
         "\n",
-        "~ Lists are mutable, allowing elements to be changed, added, or removed at any time.\n",
+        "- Lists are mutable, allowing elements to be changed, added, or removed at any time.\n",
         "\n",
-        "Tuples are immutable, meaning their contents cannot be modified after creation. This makes tuples faster and safer for use as fixed data collections. The design decision ensures certain optimization and data safety.\n",
+        " Tuples are immutable, meaning their contents cannot be modified after creation. This makes tuples faster and safer for use as fixed data collections. The design decision ensures certain optimization and data safety.\n",
         "\n",
-        "7 = What is the Difference Between “==” and “is” Operators in Python?\n",
+        "7. What is the Difference Between “==” and “is” Operators in Python?\n",
         "\n",
-        "~ \"==\" (Equality Operator) checks if the values of two objects are equal.\n",
+        "- \"==\" (Equality Operator) checks if the values of two objects are equal.\n",
         "\n",
-        "is (Identity Operator) checks if two variables point to the exact same object in memory.\n",
+        " is (Identity Operator) checks if two variables point to the exact same object in memory.\n",
         "\n",
-        "8 = What are logical Operators?\n",
+        "8. What are logical Operators?\n",
         "\n",
-        "Logical operators are used in conditional expressions:\n",
-        "and – True if both conditions are true.\n",
+        "- Logical operators are used in conditional expressions:\n",
+        " and – True if both conditions are true.\n",
         "\n",
-        "or – True if at least one condition is true.\n",
+        " or – True if at least one condition is true.\n",
         "\n",
-        "not – Inverts the truth value of a condition.\n",
+        " not – Inverts the truth value of a condition.\n",
         "\n",
-        "Example:\n",
+        " Example:\n",
         "\n",
-        "a = True b = False print(a and b) # False print(a or b) # True print(not a) # False\n",
+        " a = True b = False print(a and b) # False print(a or b) # True print(not a) # False\n",
         "\n",
-        "9 = What is Type Casting in Python?\n",
+        "9. What is Type Casting in Python?\n",
         "\n",
-        "~ Type casting is converting a variable from one data type to another, such as from int to float, or from str to int.\n",
-        "Example:\n",
+        "- Type casting is converting a variable from one data type to another, such as  from int to float, or from str to int.\n",
         "\n",
-        "num = \"100\" converted_num = int(num) # Converts string to integer.\n",
+        " Example:\n",
         "\n",
-        "10 = What is the Difference Between Implicit and Explicit Type Casting?\n",
+        " num = \"100\" converted_num = int(num) # Converts string to integer.\n",
         "\n",
-        "~ Implicit Type Casting: Python automatically converts types when needed (e.g., int to float in a calculation).\n",
+        " 10 = What is the Difference Between Implicit and Explicit Type Casting?\n",
         "\n",
-        "Explicit Type Casting: You manually convert types using functions like int(), float(), or str().\n",
+        "- Implicit Type Casting: Python automatically converts types when needed (e.g., int to float in a calculation).\n",
         "\n",
-        "11 = What is the Purpose of Conditional Statements in Python?\n",
+        " Explicit Type Casting: You manually convert types using functions like int(), float(), or str().\n",
         "\n",
-        "~ Conditional statements such as if, elif, and else enable a program to make decisions—executing different code blocks depending on whether certain conditions are true or false. This is essential for controlling program flow and logic.\n",
+        "11. What is the Purpose of Conditional Statements in Python?\n",
         "\n",
-        "12 = How Does the elif Statement Work?\n",
+        "- Conditional statements such as if, elif, and else enable a program to make decisions—executing different code blocks depending on whether certain conditions are true or false. This is essential for controlling program flow and logic.\n",
         "\n",
-        "~ The elif (else if) statement allows multiple conditions to be tested in sequence. When combined with if/else, it enables branching decisions:\n",
-        "Example:\n",
+        "12. How Does the elif Statement Work?\n",
         "\n",
-        "x = 10\n",
-        "if x > 10:\n",
-        "print(\"Greater\")\n",
-        "elif x == 10:\n",
-        "print(\"Equal\") # This branch runs\n",
-        "else:\n",
-        "print(\"Smaller\")\n",
+        "- The elif (else if) statement allows multiple conditions to be tested in sequence. When combined with if/else, it enables branching decisions:\n",
         "\n",
-        "Only one branch executes—the first whose condition is true.\n",
+        " Example:\n",
         "\n",
-        "13 = Difference Between for and while Loops?\n",
+        " x = 10\n",
         "\n",
-        "~ For loop:\n",
-        "It's used for known,finite iterations.\n",
+        " if x > 10:\n",
         "\n",
-        "Example:\n",
+        " print(\"Greater\")\n",
         "\n",
-        "for i in range(6):\n",
+        " elif x == 10:\n",
         "\n",
-        "While loop:\n",
+        " print(\"Equal\") # This branch runs\n",
         "\n",
-        "It's used for iteration continues as long as a contidion is true.\n",
+        " else:\n",
         "\n",
-        "Example:\n",
+        " print(\"Smaller\")\n",
         "\n",
-        "while i < 5:\n",
+        " Only one branch executes—the first whose condition is true.\n",
         "\n",
-        "14 = Describe a scenario where a while loop is more suitable than a for loop?\n",
+        "13. Difference Between for and while Loops?\n",
         "\n",
-        "~ A while loop is more suitable than for loop when you don't know the exact number of iterations needed beforhand. It's used when the loop should continue as long as a specific condition is true. For instance, you might use a while loop when reading data from a file until the end of the file is reached, or when waiting for user imput until a valid entry is provided. The loop continues as long as the condition remains true, regardless of how many times that takes.\n",
-        "Example:\n",
+        "- For loop:\n",
         "\n",
-        "while True: user_input = input(\"Please enter a code: \") if user_input.isdigit(): print(\"code is valid:(user_input)\") break else: print(\"Invalid code, try again. \")\n",
+        " It's used for known,finite iterations.\n",
+        "\n",
+        " Example:\n",
+        "\n",
+        " for i in range(6):\n",
+        "\n",
+        " While loop:\n",
+        "\n",
+        " It's used for iteration continues as long as a contidion is true.\n",
+        "\n",
+        " Example:\n",
+        "\n",
+        " while i < 5:\n",
+        "\n",
+        "14. Describe a scenario where a while loop is more suitable than a for loop?\n",
+        "\n",
+        "- A while loop is more suitable than for loop when you don't know the exact number of iterations needed beforhand. It's used when the loop should continue as long as a specific condition is true. For instance, you might use a while loop when reading data from a file until the end of the file is reached, or when waiting for user imput until a valid entry is provided. The loop continues as long as the condition remains true, regardless of how many times that takes.\n",
+        "\n",
+        " Example:\n",
+        "\n",
+        " while True: user_input = input(\"Please enter a code: \") if user_input.isdigit(): print(\"code is valid:(user_input)\")\n",
+        " break else: print(\"Invalid code, try again. \")\n",
         "\n",
         "\n"
       ],
@@ -164,9 +166,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gr0MXhsIMM_3",
-        "outputId": "ccbdf387-ef5b-4b73-c4cd-43050b2ead9e"
+        "outputId": "3a12fae6-ad70-4cec-f68e-260c752aaec4"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,9 +193,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "aee73d15-712f-4dd6-8b49-e69c7c64ce3a"
+        "outputId": "e9ea41b4-5b96-4d3f-f9e8-931edff5cb7e"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,9 +219,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iHNAvDPWOlT3",
-        "outputId": "b743fe1a-aebf-41c6-bec2-a4b13d8f22bf"
+        "outputId": "ea7d51f5-d5e8-41af-ff7d-29ea22aa1d2f"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
