--- a/python_basics.ipynb
+++ b/python_basics.ipynb
@@ -34,44 +34,51 @@
         "- The Python interpreter is the engine that reads and executes Python code line by line. Unlike compiled languages, which transform code into machine instructions all at once, Python's interpreter analyzes, compiles to bytecode, and runs code dynamically. This enables fast development, immediate feedback, and interactive coding. The most common implementation is CPython, but others include PyPy and Jython.\n",
         "\n",
         "3. What Are Pre-Defined Keywords in Python?\n",
-        "- Keywords in Python are reserved words with specific meanings that are part of the language's syntax. Examples include if, else, while, for, try, def, class, break, and return.\n",
+        "- Keywords in Python are reserved words with specific meanings that are part of the language's syntax.
+          Examples include if, else, while, for, try, def, class, break, and return.\n",
         "\n",
         "4. Can Keywords Be Used as Variable Names?\n",
         "\n",
-        "- No, keywords cannot be used as variable names or identifiers. Doing so results in a SyntaxError. For example, writing for = 10 or if = 5 will cause an error. Python enforces this rule to avoid ambiguity in code parsing and maintain clarity.\n",
+        "- No, keywords cannot be used as variable names or identifiers. Doing so results in a SyntaxError.
+        For example, writing for = 10 or if = 5 will cause an error. Python enforces this rule to avoid ambiguity in code parsing and maintain clarity.\n",
         "\n",
         "5. What is Mutability in Python?\n",
         "\n",
         "- Mutability refers to whether the data stored in an object can be changed after creation:\n",
         "\n",
-        " Mutable objects can have their contents altered (e.g., lists, dictionaries, sets).\n",
+        "- Mutable objects can have their contents altered (e.g., lists, dictionaries, sets).\n",
         "\n",
-        " Immutable objects cannot be changed after creation (e.g., tuples, strings, integers).\n",
+        "- Immutable objects cannot be changed after creation (e.g., tuples, strings, integers).\n",
         "\n",
         "6. Why Are Lists Mutable, but Tuples are Immutable?\n",
         "\n",
         "- Lists are mutable, allowing elements to be changed, added, or removed at any time.\n",
         "\n",
-        " Tuples are immutable, meaning their contents cannot be modified after creation. This makes tuples faster and safer for use as fixed data collections. The design decision ensures certain optimization and data safety.\n",
+        "- Tuples are immutable, meaning their contents cannot be modified after creation. This makes tuples faster and safer for use as fixed data collections. The design decision ensures certain optimization and data safety.\n",
         "\n",
         "7. What is the Difference Between “==” and “is” Operators in Python?\n",
         "\n",
         "- \"==\" (Equality Operator) checks if the values of two objects are equal.\n",
         "\n",
-        " is (Identity Operator) checks if two variables point to the exact same object in memory.\n",
+        "- is (Identity Operator) checks if two variables point to the exact same object in memory.\n",
         "\n",
         "8. What are logical Operators?\n",
         "\n",
         "- Logical operators are used in conditional expressions:\n",
         " and – True if both conditions are true.\n",
         "\n",
-        " or – True if at least one condition is true.\n",
+        "- or – True if at least one condition is true.\n",
         "\n",
-        " not – Inverts the truth value of a condition.\n",
+        "- not – Inverts the truth value of a condition.\n",
         "\n",
         " Example:\n",
         "\n",
-        " a = True b = False print(a and b) # False print(a or b) # True print(not a) # False\n",
+        " a = True 
+          b = False
+          print(a and b)
+         # False 
+          print(a or b) 
+        # True print(not a) # False\n",
         "\n",
         "9. What is Type Casting in Python?\n",
         "\n",
